# cmake-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Dockerfile  Doxyfile  README.md  config.bat  makefile  rc.in  run
.github/workflows/: build.yml  documentation.yml  manual.yml  test.yml
app/: CMakeLists.txt
app/src/: main.cpp
doc/: footer.tex  header.tex
hooks/: pre-commit
lib/: CMakeLists.txt  config.hpp.in  version.hpp.in
lib/examples/: first.cpp
lib/include/tmpl/: config.hpp  docs.hpp  example.hpp  tmpl.hpp
lib/src/: CMakeLists.txt  example.cpp
lib/tests/: CMakeLists.txt  first.cpp
src/: CMakeLists.txt
