cmake_minimum_required(VERSION 3.16)

project(app VERSION 0.0.1 LANGUAGES CXX)

add_executable(${PROJECT_NAME} MACOSX_BUNDLE src/main.cpp)
target_link_libraries(${PROJECT_NAME} PRIVATE ${CMAKE_PROJECT_NAME}::lib)
set_target_properties(${PROJECT_NAME} PROPERTIES MACOSX_RPATH @executable_path)

install(TARGETS ${PROJECT_NAME}
	RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT ${PROJECT_NAME}_runtime
	BUNDLE DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT ${PROJECT_NAME}_runtime
)
install(FILES src/main.cpp DESTINATION src COMPONENT ${PROJECT_NAME}_src)
